--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 local/*
 .vscode/*
+*.tar
 containers/pentaho-data-integration/pdi-client-8.3/predownloaded/*.zip
 containers/pentaho-data-integration/pdi-client-8.3/predownloaded/*.bin
 containers/pentaho-data-integration/pdi-client-8.3/resources/plugins/*
@@ -13,4 +14,5 @@ containers/pentaho-server/pentaho-server-9.1/predownloaded/*.bin
 containers/pentaho-server/pentaho-server-8.3/predownloaded/*.zip
 containers/pentaho-server/pentaho-server-8.3/predownloaded/*.bin
 kubernetes/pentaho-server/postgres-config/*
+kubernetes/pentaho-server/mssql*
 
