--- a/kubernetes/pentaho-server/manifests/pentaho-server-mssql.yaml
+++ b/kubernetes/pentaho-server/manifests/pentaho-server-mssql.yaml
@@ -85,6 +85,8 @@ spec:
               value: "/secrets/key/key.json"
             - name: PENTAHO_INSTALLED_LICENSE_PATH
               value: "/secrets/pentahoLicense/.installedLicenses.xml"
+            - name: DISPLAY
+              value: ""
             - name: CATALINA_OPTS
               value: "-Dpentaho.installed.licenses.file=/secrets/pentahoLicense/.installedLicenses.xml -XX:+UnlockExperimentalVMOptions -XX:+UseContainerSupport -XX:+UseCGroupMemoryLimitForHeap -Dfile.encoding=utf8 -XX:MaxRAMPercentage=80.0 -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=20 -XX:+ExitOnOutOfMemoryError -XX:+UseG1GC"                
         args: ["/opt/pentaho/pentaho-server/tomcat/bin/catalina.sh","run"]
