To be able to use --build-arg while building it
variables should be declared like this to be able to use --build-arg
docker build -f ./Dockerfile --build-arg SERVICE_PACK_VERSION=8.3.0.22 --build-arg SERVICE_PACK_DIST=1241 -t pentaho/pentaho-server:8.3.0.22 .

--- a/containers/pentaho-data-integration/pdi-client-8.3/Dockerfile
+++ b/containers/pentaho-data-integration/pdi-client-8.3/Dockerfile
@@ -16,8 +16,8 @@ ARG INSTALLATION_PATH=/opt/pentaho
 ARG INSTALLER_PATH=/opt/pentaho-installer
 ## Arguments for regular Pentaho client install
 ARG PENTAHO_INSTALLER_NAME=pdi-ee-client
-ARG PENTAHO_VERSION=8.3.0.0
-ARG PENTAHO_PACKAGE_DIST=371
+ARG PENTAHO_VERSION
+ARG PENTAHO_PACKAGE_DIST
 ARG FILE_SOFTWARE=${PENTAHO_INSTALLER_NAME}-${PENTAHO_VERSION}-${PENTAHO_PACKAGE_DIST}-dist.zip
 ARG FILE_RELEASE_NAME=${PENTAHO_INSTALLER_NAME}-${PENTAHO_VERSION}-${PENTAHO_PACKAGE_DIST}
 
